--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,7 +32,7 @@ website:
         href: mailto:kjmimmack@gmail.com
         text: "E-Mail"
   page-footer:
-    center: "Last Updated: February 17, 2024"
+    center: "Last Updated February 17, 2024"
     border: true
 
 
